fixed gap

--- a/src/styles.css
+++ b/src/styles.css
@@ -50,7 +50,13 @@ h6 h5:first-child {
 text-decoration: none;
 color: black;
 } 
+.post-display {
+  margin-top: 0;
+}
 
+.post-header {
+  margin-bottom: 10px;
+}
 .ui.card, .ui.cards>.card {
   width: auto;
   border: 1px solid;
@@ -82,6 +88,7 @@ color: black;
   font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
   font-size: 1.2rem;
   text-decoration: none;
+  margin: 20, 0;
 }
 
 .btn.btn-sm {
